Refresh Web community styles
Refresh Web community styles

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -164,7 +164,8 @@
             cursor: pointer;
             margin: 10px;
             padding: 10px;
-            box-shadow: 4px 4px 4px 4px #3AA6B9;
+            box-shadow: 4px 4px #3AA6B9;
+            border: 1px solid #3AA6B9;
             overflow-x: hidden;
             margin-left: 10px;
             border-radius: 10px;
