--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
@@ -12,12 +12,14 @@
             padding: 10px;
             width: 500px;
             max-height: 600px;
-            box-shadow: 5px 5px 5px 5px gray;
-            background: white;
 
             .item-result {
                 display: flex;
                 gap: 10px;
+
+                .invite {
+                    box-shadow: 2px 2px 2px 2px green;
+                }
             }
         }
 
@@ -104,8 +106,6 @@
         position: fixed;
         padding: 15px 10px;
         border-radius: 25px;
-        box-shadow: 5px 5px 5px 5px gray;
-        background: white;
         min-width: 500px;
 
         .create-community__item {
@@ -122,6 +122,10 @@
             display: flex;
             justify-content: center;
             gap: 25px;
+
+            .save {
+                box-shadow: 2px 2px 2px 2px green;
+            }
         }
     }
 }
