--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/personalChat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/personalChat.scss
@@ -34,13 +34,19 @@
     align-items: center;
     left: 50%;
     top: 25%;
-    background: white;
     padding: 20px;
     border-radius: 25px;
-    box-shadow: 3px 3px 3px 3px gray;
 
     &__actions {
         display: flex;
         gap: 25px;
+
+        .remove {
+            box-shadow: 2px 2px 2px 2px brown;
+        }
+
+        .cancel {
+            box-shadow: 2px 2px 2px 2px white;
+        }
     }
 }
