--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -44,7 +44,7 @@
         display: flex;
         flex-direction: column;
         width: 500px;
-        gap: 15px;
+        gap: 10px;
         padding: 10px;
         box-shadow: 4px 4px 4px 4px #58A399;
         border-radius: 20px;
@@ -94,6 +94,8 @@
     &__content {
         cursor: default;
         min-height: 70px;
+        border-top: 2px solid #219C90;
+        padding: 5px;
     }
 
     &__reactions {
