--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -10,6 +10,10 @@
     padding: 15px;
     overflow-y: scroll;
 
+    &__list {
+        width: 100%;
+    }
+
     &__content, &__other-content {
         display: flex;
         flex-direction: column;
@@ -40,7 +44,6 @@
             align-items: center;
 
             .text-of-message {
-
                 &__unread, &__read {
                     padding: 5px 10px;
                     max-width: 90%;
@@ -49,10 +52,7 @@
                     cursor: default;
                     padding: 5px 10px;
                     box-shadow: 2px 2px green;
-                }
-
-                &__unread {
-                    background: #E0F0E4;
+                    background: #088395;
                 }
             }
 
@@ -195,6 +195,12 @@
         flex-direction: column;
         align-items: end;
         width: 100%;
+
+        .text-of-message {
+            &__unread, &__read {
+                background: #26355D;
+            }
+        }
     }
 
     ul li {
