--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/communities.scss
@@ -22,6 +22,17 @@
         flex-direction: column;
         width: 100%;
 
+        .create-new-community {
+            margin: 0 20px;
+            font-size: 12px;
+            color: #7776B3;
+            cursor: pointer;
+        }
+
+        .create-new-community:hover {
+            transform: scale(1.1);
+        }
+
         .title {
             display: flex;
             justify-content: center;
