--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/friends.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/friends.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     gap: 10px;
 
+    &__empty {
+        opacity: 0.5;
+    }
+
     ul {
         display: flex;
         flex-direction: column;
@@ -14,11 +18,13 @@
         flex-direction: row;
         align-items: center;
 
-
         .special-user__another {
             display: flex;
             align-items: center;
             gap: 25px;
+            border: 2px solid white;
+            padding: 5px 10px;
+            border-radius: 10px;
 
             svg {
                 cursor: pointer;
