--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -64,6 +64,7 @@
         .content {
             display: flex;
             flex-direction: column;
+            width: 100%;
             gap: 5px;
 
             .special-user__another {
