--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/profile.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/profile.scss
@@ -5,4 +5,39 @@
     .privacy, .general {
         margin-left: 25px;
     }
+
+    .inactive {
+        visibility: hidden;
+        height: 0;
+    }
+
+    &__edit-profile, &__information {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        margin: 20px 0;
+
+        .title {
+            display: flex;
+            align-items: center;
+            gap: 30px;
+
+            svg {
+                cursor: pointer;
+            }
+
+            svg:hover {
+                transform: scale(1.2);
+            }
+        }
+
+        .actions {
+            display: flex;
+            gap: 10px;
+
+            .save {
+                box-shadow: 2px 2px 2px 2px green;
+            }
+        }
+    }
 }
