--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/requestToConnect.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/requestToConnect.scss
@@ -2,7 +2,8 @@
     position: relative;
     display: flex;
     align-items: center;
-    margin: 10px 0;
+    margin-top: 10px;
+    gap: 10px;
 
     &__username {
         display: flex;
@@ -14,6 +15,34 @@
             display: flex;
             gap: 15px;
             align-items: center;
+        }
+    }
+
+    &__content {
+        display: flex;
+        padding: 10px 20px;
+        border-radius: 15px;
+        box-shadow: 2px 2px 2px 2px #6AD4DD;
+        cursor: default;
+
+        .special-user__another {
+            display: flex;
+            gap: 15px;
+            align-items: center;
+            margin: 0 5px;
+
+            .username {
+                width: auto;
+            }
+        }
+
+        .special-user__another:hover {
+            color: green;
+        }
+
+        .community-name {
+            margin: 0 10px;
+            font-weight: bold;
         }
     }
 
