--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/dashboard.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/dashboard.scss
@@ -6,7 +6,7 @@
         display: flex;
         justify-content: start;
         flex-wrap: wrap;
-        gap: 50px 10px;
+        gap: 50px 20px;
     }
 
     .min-details {
@@ -86,6 +86,9 @@
         flex-direction: column;
         min-width: 300px;
         gap: 25px;
+        box-shadow: 2px 2px 2px 2px green;
+        border-radius: 20px;
+        padding: 20px;
 
         .extend {
             box-shadow: 3px 3px 3px 3px white;
@@ -117,6 +120,7 @@
             gap: 15px;
             color: white;
             margin: 0;
+            padding: 0;
 
             li {
                 display: flex;
