--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -31,6 +31,63 @@
             width: 100%;
         }
     }
+
+    &__input-area {
+        .tags {
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            margin: 10px 0;
+            gap: 10px;
+
+            input {
+                padding: 5px;
+                border-radius: 20px;
+                height: 20px;
+                width: 100px;
+                font-size: 10px;
+            }
+
+            &__add {
+                display: flex;
+                align-items: center;
+                height: 30px;
+                gap: 10px;
+                padding: 5px 10px;
+                border-radius: 10px;
+                box-shadow: 2px 2px 2px 2px gray;
+
+                .title {
+                    cursor: pointer;
+                }
+            }
+
+            &__list {
+                display: flex;
+                justify-content: start;
+                margin: 0;
+                padding: 5px 0;
+                width: 600px;
+                overflow: auto;
+                gap: 10px;
+
+                li {
+                    display: flex;
+                    align-items: center;
+                    gap: 15px;
+                    padding: 5px 10px;
+                    border-radius: 10px;
+                    box-shadow: 1px 1px 1px 1px green;
+                    font-size: 12px;
+                }
+            }
+
+            svg {
+                color: red;
+                cursor: pointer;
+            }
+        }
+    }
 }
 
 .posts {
@@ -60,11 +117,12 @@
 
     &__title {
         display: flex;
+        justify-content: space-between;
 
         .content {
             display: flex;
             flex-direction: column;
-            width: 100%;
+            max-width: 60%;
             gap: 5px;
 
             .special-user__another {
@@ -74,6 +132,11 @@
                 padding: 5px;
                 border-radius: 10px;
                 box-shadow: 1px 1px 1px 1px white;
+
+                .username {
+                    width: auto;
+                    padding: 0 5px;
+                }
             }
         }
 
@@ -81,14 +144,23 @@
             font-size: 10px;
         }
 
-        .post-remove:hover {
-            cursor: pointer;
+        .tags {
+            display: flex;
+            align-items: start;
+            gap: 10px;
+
+            li {
+                padding: 5px 10px;
+                border-radius: 10px;
+                box-shadow: 1px 1px 1px 1px #088395;
+                font-size: 12px;
+            }
         }
 
-        .post-remove.container {
+        .post-remove {
             display: flex;
-            justify-content: flex-end;
-            margin: 0 -15px;
+            align-items: center;
+            cursor: pointer;
         }
     }
 
